Day 08 - BCrypt password hashing, JWT roles, method-level security